# tak-taf-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
include/: editor.h  taf.h
src/: editor.c  main.c  png_io.c  taf.c  taf_write.c
